# hyunsoo_robotics_portfolio

./: README.md
teleop-leader-arm-ros2/: LICENSE
teleop-leader-arm-ros2/docs/: pipeline.md
teleop-leader-arm-ros2/ros2_ws/src/avatar_leader/: package.xml  setup.py
teleop-leader-arm-ros2/ros2_ws/src/avatar_leader/avatar_leader/plugins/: calibration.py
teleop-leader-arm-ros2/ros2_ws/src/avatar_leader/avatar_leader/src/: bridge_node.py
vision-chess-manipulation-ros2/docs/: pipeline.md
vision-chess-manipulation-ros2/ros2_ws/src/dynamixel_control/: CMakeLists.txt  package.xml  setup.py
vision-chess-manipulation-ros2/ros2_ws/src/dynamixel_control/dynamixel_control/main/: chess_brain.py  chess_mapper.py  motor_node.py  motor_publisher.py
vision-chess-manipulation-ros2/ros2_ws/src/dynamixel_control/dynamixel_control/urdf/: chess_robot.urdf.xacro  chess_robot_visual.urdf.xacro  urdf.xacro
vision-chess-manipulation-ros2/ros2_ws/src/dynamixel_control/dynamixel_control/utils/: ax12_driver.py  calibration.py  rviz_bridge.py
vision-chess-manipulation-ros2/ros2_ws/src/dynamixel_control/dynamixel_control/vision/: camera_bridge_node.py  camera_node.py  chess_timer.py  detection_node.py
vision-chess-manipulation-ros2/ros2_ws/src/dynamixel_control/launch/: chessrobot.launch.py
